               NCBI_TAXONOMY_LOCATOR removed, added configuration options NCBI_TAXONOMY_PATH and ENZYME_CLASSIFICATION_DATA_PATH,
               provide separate configuration options schema version assignment within collections,
               up-version api and json schema, add config option VRPT_REPO_PATH_ENV.

               chem_comp category attributes normalized between chem_comp_core and bird_chem_comp_core collections.
 17-Mar-2019   V0.48 adding subcategory aggregate rcsb_macromolecular_names_combined
 24-Mar-2019   V0.49 address missing category issues in chemical reference data collections, various changes to
               address schema validation exceptions introduced by additionalProperties: False.  Add consolidated
               EC item.   Extend taxonomy lineaage to include leaf node.
 24-Mar-2019   V0.50 temporary adjustment for error handing for obsolete taxonony ids.
 25-Mar-2019   V0.51 remap merged taxons and adjust exception handling for taxonomy lineage generation
 31-Mar-2019   V0.52 block_attributes: REF_PARENT_CATEGORY_NAME: REF_PARENT_ATTRIBUTE_NAME: to provide parent details for synthetic key
               add 'addParentRefs' in enforceOpts to write relative $ref properties to describe parent relationships.
                Address GitHub issues:
                        Failed int cast for None in DataTransformFactory #20 and
                        MySQL SchemaDefLoader skip zero values #19
  3-Apr-2019   V0.53 added private schema property _primary_key to mark attributes that are part of an object primary key.
               This feature is controlled by 'addPrimaryKey' enforceOpts property.
  7-Apr-2019   V0.54 adding support for integrating CATH and SCOP structural classifiers and sequence difference type counts.
 11-Apr-2019   V0.55 add tree loaders to etl cli tool, add entity_instance_validation, add a variety of counts, add atc codes.