@@ -62,7 +62,7 @@ setup(
                       'strict-rfc3339',
                       'mysqlclient >= 1.3.12',
                       'pymongo >= 3.7.0',
-                      'mmcif >= 0.35',
+                      'mmcif >= 0.36',
                       'scandir; python_version < "3.0"',
                       # 'configparser; python_version < "3.0"',
                       'rcsb.utils.io >= 0.30',
@@ -70,8 +70,8 @@ setup(
                       'rcsb.utils.multiproc >= 0.12',
                       'rcsb.utils.validation >= 0.13',
                       'rcsb.utils.chemref >= 0.19',
-                      'rcsb.utils.ec >= 0.10',
-                      'rcsb.utils.taxonomy >= 0.13',
+                      'rcsb.utils.ec >= 0.12',
+                      'rcsb.utils.taxonomy >= 0.14',
                       'rcsb.utils.struct >= 0.13'],
     packages=find_packages(exclude=['rcsb.db.tests', 'rcsb.db.tests-*', 'tests.*']),
     package_data={
